# computer-network-1402-1

./: .gitignore  README.md
UDP-Hole-Punching/: README.md  config.py  runner.py
UDP-Hole-Punching/client/: client.py
UDP-Hole-Punching/server/: server.py
UDP-Hole-Punching/shared/: STUN_protocol.py  utils.py
hw1/practical/: q5.1  q5.2  q5.3
hw2/UDP/: dns_loader.c  dns_loader.h  dns_parser.c  dns_query_resolver.c  dns_query_resolver.h  makefile  runner.c  udp_socket_binder.c  udp_socket_binder.h
hw2/UDP/data-types/: dns_message_t.h  resource_record.h
hw3/tcp/: CMakeLists.txt  Makefile  main.c
hw3/tcp/CbNB/: CbNB.c  CbNB.h
hw3/tcp/connection_handler/: README.md  connection_handler.c  connection_handler.h
hw3/tcp/data_types/: buffer.c  buffer.h  http_request.c  http_request.h
hw3/tcp/http_parser/: http_parser.c  http_parser.h
hw3/tcp/logger/: logger.c  logger.h
hw3/tcp/socket/: tcp_socket.c  tcp_socket.h
hw4/: CMakeLists.txt
hw4-py/: config.py  readme.md
hw4-py/client/: client.py
hw4-py/dt/: receiver.py  sender.py
hw4-py/server/: server.py
hw4-py/utils/: utils.py
